load("@bzd_rules_nodejs//nodejs:defs.bzl", "bzd_nodejs_library")

bzd_nodejs_library(
    name = "scenario",
    srcs = [
        "scenario.js",
    ],
    visibility = ["//visibility:public"],
)

bzd_nodejs_library(
    name = "filesystem",
    srcs = [
        "filesystem.js",
    ],
    visibility = ["//visibility:public"],
)
